--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="card">
-        <img class="avatar" id="ctrocinski-avatar" src="#" alt="Cynthia Trocinski" />
+        <img class="avatar" id="ctrocinski-avatar" src="cynthia-trocinski-avatar.jpg" alt="Cynthia Trocinski" />
         <h1>Cynthia Trocinski</h1>
         <h2>GE Aviation Software Edison</h2>
         <ul>
