--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img class="avatar" id="ctrocinski-avatar" src="cynthia-trocinski-avatar.jpg" alt="Cynthia Trocinski" />
         <h1>Cynthia Trocinski</h1>
         <h2>GE Aviation Software Edison</h2>
-        <ul>
+        <ul class="contacts">
             <li><a href=""><img src="#" alt="Twitter"></a></li>
             <li><a href=""><img src="#" alt="Github"></a></li>
             <li><a href=""><img src="#" alt="Email"></a></li>
